--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -2,18 +2,23 @@
 \begin{document}
 \graphicspath{{im/}{intro/im/}}
 \chapter{Introduction}
-\section{Impact of HIV}
+\section{The HIV epidemic}
 	In 1981, physicians began to notice a mysterious increase, often clustered in men who had sex with men or intravenous drug users, in the occurrences of Kaposi's sarcoma and pneumocystis pneumonia \citep{Gottlieb1981,Friedman-Kien1981,Hymes1981,Masur1981,Siegal1981,Gottlieb1981a}. 
 	
-	Kaposi's sarcoma was, until 1981, a rare cancer in the US found largely in elderly men with Jewish or Mediterranean ancestry \citep{Laor1979}. Kaposi's sarcoma had also been seen in immunocompromised individuals \citep{Klein1974,Myers1974,Kapadia1977} and there were suggestions that it was a virus-associated cancer \citep{Safai1981} although the causative human herpesvirus 8 would not be discovered for another decade \citep{Chang1994,Sitas1999}. 
+	Kaposi's sarcoma was, until 1981, a rare cancer in the US found largely in elderly men with Jewish or Mediterranean ancestry \citep{Laor1979}. Kaposi's sarcoma had also been seen in immunocompromised individuals \citep{Klein1974,Myers1974,Kapadia1977} and there were suggestions that it was a virus-associated cancer \citep{Safai1981} although the causative human herpesvirus would not be discovered for another decade \citep{Chang1994,Sitas1999}. 
 	
-	Pneumocystis pneumonia was known to be caused by infection of the alveoli with the yeast-like fungus \emph{Pneumocystis jirovecii} \citep{Burke1973,Hughes1977}. Pneumocystis pneumonia was almost exclusively seen only in patients with suppressed immune systems or immune disorders and rarely if ever in immunocompetent individuals \citep{Hughes1977}. %, previously known as \emph{Pneumocystis carinii} \citep{Stringer2009}
+	Pneumocystis pneumonia was known to be caused by infection of the alveoli with the yeast-like fungus \emph{Pneumocystis jirovecii} \citep{Burke1973,Hughes1977}. Pneumocystis pneumonia was almost exclusively seen only in patients with suppressed immune systems or immune disorders and rarely, if ever, in immunocompetent individuals \citep{Hughes1977}. %, previously known as \emph{Pneumocystis carinii} \citep{Stringer2009}
 
-	The mechanism for this spike of opportunistic infections was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982}. The disease was eventually labeled acquired immunodeficiency syndrome (AIDS). However, the underlying cause remained unclear. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982,Poon1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982}, maternal transmission \citep{OReilly1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards an infectious agent. In 1983, a virus later named human immunodeficiency virus type 1 (HIV-1) was isolated from patient samples \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}. 
-
-	Reports of AIDS and associated opportunistic infections in sub-Saharan Africa soon revealed widespread endemic infection \citep{Clumeck1983,Clumeck1984,VandePerre1984,Piot1984} and a great diversity of viruses \citep{Nkengasong1994,Louwagie1995,Vidal2000,Rambaut2001,Yang2001,Kalish2004}. Retrospective studies suggested that the virus had been present in Europe and USA for several decades \citep{Froland1988,Garry1988} and circulating for even longer in Africa \citep{Bygbjerg1983,Vandepitte1983,Clumeck1984,Nahmias1986,Zhu1998,Worobey2008}. Isolates of HIV-1 from what is now Kinshasa, in the Democratic Republic of Congo, from as early as 1959 showed already existing viral diversification \citep{Nahmias1986,Zhu1998,Worobey2008}. Phylogenetic analyses of HIV-1 type M sequences estimate a most recent common ancestor in the early 1900s \citep{Korber2000,Salemi2001,Sharp2001,Yusim2001,Worobey2008,Faria2014}.
+	The mechanism for this spike of opportunistic infections was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982}. This disease was eventually labeled acquired immunodeficiency syndrome (AIDS). However, the underlying cause remained unclear. 
 	
-	A virus similar to HIV-1 was observed in chimpanzees \citep{Peeters1989,Huet1990} and survey of wild chimpanzees revealed a likely origin of HIV-1 was from a zoonotic transmission, perhaps from harvesting of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}. The zoonosis most likely occurred in southeast Cameroon \citep{Gao1999,Keele2006,VanHeuverswyn2007} from which the virus was transported down the Sangha River \citep{Sharp2008} to the city of Kinshasha, where the virus began its global spread \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Faria2014}. A combination of social upheaval, mobilization, urbanization and mass vaccination campaigns with unsterilized needles appear to have provided fuel for the growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}.
+	Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982,Poon1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982}, maternal transmission \citep{OReilly1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards an infectious agent. In 1983, a virus later named human immunodeficiency virus type 1 (HIV-1) was isolated from patient samples \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}. 
+
+	Reports of AIDS and associated opportunistic infections in sub-Saharan Africa soon revealed widespread endemic infection \citep{Clumeck1983,Clumeck1984,VandePerre1984,Piot1984} and a great diversity of viruses \citep{Nkengasong1994,Louwagie1995,Vidal2000,Rambaut2001,Yang2001,Kalish2004}. Retrospective studies suggested that the virus had been present, at least sporadically, in Europe and the USA for decades \citep{Froland1988,Garry1988} and circulating for even longer in Africa \citep{Bygbjerg1983,Vandepitte1983,Clumeck1984,Nahmias1986,Zhu1998,Worobey2008}. Archived patient samples containing HIV-1 genome fragments from as early as 1959 were found in what is now Kinshasa, in the Democratic Republic of Congo \citep{Nahmias1986}. These samples showed extensive genome diversification already present in the 1960s, suggesting that HIV-1 had been circulating in humans for some time \citep{Zhu1998,Worobey2008}. Phylogenetic analyses adding in contemporary HIV-1 type M sequences estimated a most recent common ancestor in the early 1900s \citep{Korber2000,Salemi2001,Sharp2001,Yusim2001,Worobey2008,Faria2014}.
+	
+	A virus similar to HIV causing AIDS in monkeys was soon discovered in macaques \citep{Daniel195,Peeters1989} and many other primates \citep{Peeters2001}. HIV-1 appeared most similar to virus found in chimpanzees \citep{Peeters1989,Huet1990} and surveys of wild chimpanzees revealed a closely related simian immunodeficiency virus infecting chimpanzees in southeast Cameroon \citep{Gao1999,Keele2006,VanHeuverswyn2007}.
+	
+	The ancestor of HIV-1 was likely transmitted from a chimpanzee to a human, perhaps during harvesting of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}, in the forests of southeastern Cameroon then virus was transported down the Sangha River \citep{Sharp2008} to the city of Kinshasha, where the virus began its global spread \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Faria2014}. A combination of social upheaval, increased mobility, urbanization and mass vaccination campaigns with unsterilized needles appear to have provided fuel for the growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}. A virus appears to have been carried from Africa to Haiti in the 1960s, perhaps by workers returning home from an exchange program \citep{Piot1984,Vangroenweghe2001}, and into the US in the 1970s \citep{Gilbert2007} before being detected in the US in 1981. In the past 34 years, HIV-1 has spread to over 78 million people and caused over 35 million deaths \citep{UNAIDSCGA2014}.
+
 	%siv cpz is itself a recombinate http://www.sciencemag.org/content/300/5626/1713.full
 	
 	%With a most recent common ancestor of HIV-1 M type estimated in the early 1900s \citep{Korber2000,Salemi2001,Sharp2001,Yusim2001,Worobey2008,Faria2014}. Zoonotic transmissions had probably occurred previously but a combination of social upheaval, mobilization, urbanization and mass vaccination campaigns with unsterilized needles appear to have provided fuel for the growing epidemic \citep{Chitnis2000,deSousa2010,deSousa2012,Faria2014}. The virus may have moved from Africa to Haiti in the 1960s and into the US in the 1970s \citep{Gilbert2007}. [[mention clade B in haiti and widespread but many more in africa and worldwide starburst]]
@@ -26,14 +31,22 @@
 
 	%larder1993 multidrug resistant mutations in vitro
 
-	In the early days of the epidemic before there were tests to detect the virus, the first sign of HIV was often the onset of AIDS. Opportunistic infections \citep{Moore1996} and death often followed soon after. The median survival time after diagnosis with AIDS was about 1 year if untreated \citep{Rothenberg1987,Vella1992}. Testing for HIV revealed that from the time of infection with HIV, patients had a median survival time of about 10 years without antiretroviral therapy\citep{Deschamps2000,Harrison2010,CGAIDSIHIVS2000}. %In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Median time to death 7--12 years \citep{CGAIDSIHIVS2000}. %Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
-	About 20 years life expectancy in HAART era \citep{AntiretroviralTherapyCohortCollaboration2009,Harrison2010} although catching late and cofounding factors can increase mortality \citep{AntiretroviralTherapyCohortCollaboration2009}
+	In the early days of the epidemic, there were no tests to detect the virus, and no treatments.  The presence of the virus was often revealed by the onset of AIDS. Opportunistic infections \citep{Moore1996} and death usually followed soon after. The median survival time after diagnosis with AIDS was about 1 year \citep{Rothenberg1987,Vella1992}. 
 
-	The successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment HIV in 1987 \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996}. Median survival time from AIDS diagnosis rose to only about 2 years with therapy \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. Sequential administration of multiple antiretroviral drugs \citep{Kahn1992,Abrams1994,deJong1994,Schmit1996a} did not greatly improve prognosis.
+	Isolation of the virus allowed the detection of the virus through assays of antibody response. Testing revealed that, from infection, patients had a median survival time of around a decade \citep{Lui1986,Deschamps2000,Harrison2010,CGAIDSIHIVS2000}. % and thus that the virus had an extremely long period of clinical latency with few specific symptoms while remaining infectious.
+	
+	In 1987, the successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996}. Median survival time from AIDS diagnosis rose to only about 2 years with therapy \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. 
+	
+	Additional antiretrovirals, again targeting reverse transcriptase, were developed \citep{Vella2012}. Sequential or alternating administration of different antiretroviral drugs did not greatly improve prognosis \citep{Kahn1992,Skowron1993,Abrams1994,deJong1994,Schmit1996a}. Simultaneous treatment with two reverse transcriptase inhibitor offered modest benefits but viral escape was still common \citep{Collier1993,Hammer1996,Eron1995,Saravolatz1996,Darbyshire1996}.
+
+	Development of drugs targeting other stages of the HIV replication cycle allowed synergistic combinations of antiretroviral drugs \citep{Dornsife1991,Johnson1991,Cox1994,Feng2009,Jilek2012,Kulkarni2014}. The difficulty for HIV of evolving multiple drug resistant mutations \citep{Chow1993,Larder1995} meant that therapy using simultaneous combinations of drugs finally began to offer patients more hope of long term survival \citep{Collier1996,Hammer1997,Gulick1997,Montaner1998,Moore1999}. With early triple therapy, median survival times rose to 20 years \citep{AntiretroviralTherapyCohortCollaboration2009,Harrison2010}, rising to $\frac{2}{3}$ of uninfected life expectancy \citep{ATCC2008,Keiser2004} and finally approaching control populations with uninterrupted antiretroviral treatment \citep{vanSighem2010,Nakagawa2013,Johnson2013}. %but inflammation and drug toxicity, health care burden still a problem \citep{Deeks2013}
+
+	%Testing for HIV revealed that from the time of infection with HIV, patients had a median survival time of about 10 years without antiretroviral therapy\citep{Deschamps2000,Harrison2010,CGAIDSIHIVS2000}. %In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Median time to death 7--12 years \citep{CGAIDSIHIVS2000}. %Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
+	%About 20 years life expectancy in HAART era \citep{AntiretroviralTherapyCohortCollaboration2009,Harrison2010} although catching late and cofounding factors can increase mortality \citep{AntiretroviralTherapyCohortCollaboration2009}
+
 	 
-	Synergistic combinations of antiretroviral drugs \citep{Dornsife1991,Johnson1991,Cox1994,Feng2009,Jilek2012,Kulkarni2014} and the difficulty of evolving multiple drug resistant mutations therapy \citep{Chow1993,Larder1995} [[more refs here]] meant that therapy using simultaneous combinations of drugs finally began to offer patients more hope of long term survival \citep{Collier1993,Eron1995,Collier1996,Hammer1996,Saravolatz1996,Darbyshire1996,Hammer1997,Gulick1997,Moore1999}.
 
-	2/3 life expectency in 2005 \citep{ATCC2008,Keiser2004}. Life expectancy of HIV patients receiving consistent antiretrovirals now approaches control population \citep{vanSighem2010,Nakagawa2013,Johnson2013} but inflammation and drug toxicity, health care burden still a problem \citep{Deeks2013}
+	%2/3 life expectency in 2005 \citep{ATCC2008,Keiser2004}. Life expectancy of HIV patients receiving consistent antiretrovirals now approaches control population \citep{vanSighem2010,Nakagawa2013,Johnson2013} but inflammation and drug toxicity, health care burden still a problem \citep{Deeks2013}
 
 	%moore1992 survive >900 days median if >150 CD4 baseline
 
@@ -66,16 +79,19 @@
 
 	\begin{figure}
 		\centering
-		\includegraphics[width=\textwidth]{lifecycle.pdf} %REMOVE%
+		\includegraphics[width=\textwidth]{lifecycle.pdf}
 		\caption[The HIV replication cycle]{The HIV replication cycle} %[[check rick book for caption]]
 		\label{figHIVLifecycle}
 	\end{figure}
 
 	\begin{figure}
 		\centering
-		\includegraphics[width=\textwidth]{genome.png} %REMOVE%
-		\caption[The HIV-1 genome]{The HIV-1 genome. Rectangles indicates open reading frames and the \fivePrime{} and \threePrime{} LTR. Splicing in tat and rev is shown as a connecting line. Coordinates are for the HIV strain HXB2.}
-		\label{figHIVGenome}
+		\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top}}}]{figure}[\FBwidth]{
+			\includegraphics[width=.7\textwidth]{exonProt2.pdf}
+		}{
+			\caption[The HIV-1 genome]{The HIV-1 genome. Arrows indicate open reading frames. Dashed lines show major splice acceptors (red) and donors (blue). Major spliceforms are shown as thin rectangles and colored according to their corresponding open reading frame.}
+			\label{figHIVGenome}
+		}
 	\end{figure}
 
 
@@ -215,7 +231,7 @@
 %http://www.medscape.com/viewarticle/715166_2
 	Immunoassays provide cheap immediate testing of HIV infection in patients. These tests are based on the enzyme-linked immunosorbent assay (ELISA), using an enzyme linked to an antibody to produce a detectable signal in the presence of antigen \citep{Yalow1960,Engvall1971,VanWeemen1971}. %If the labeled antibodies are targeted to human antibodies then a patient's immune response to an antigen can be measured.
 	
-	The isolation of HIV \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} allowed the production of large quantities of virions. These virions were bound to a substrate, sera from patients added and any patients antibodies sensitive to HIV allowed to bind. Any unbound antibodies were washed away. Then a peroxidase enzyme-labeled antibody targeted to human antibody bound was added, allowed to bind and the unbound antibodies again washed away. Any HIV-targeted patient antibodies would bind the antigen and be bound in turn by the peroxidase-labeled antibody and the peroxidase would then change the color of media \citep{Safai1984,Sarngadharan1984}. These tests had a large false positive rate and the standard procedure was to perform multiple ELISA tests follow by a Western blot test \citep{Towbin1979,CDC1985} but false positives were still prevalent \citep{Burke1986}. More conservative criteria and cleaner lab procedures reduced false positives \citep{Burke1988}. These assays have been developed to fourth generation \citep{Chappel2009} with more sensitive and specific detection of patient antibodies and earlier detection using antibodies against the HIV capsid protein \citep{Weber1998,Weber2002}.  
+	The isolation of HIV \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} allowed the production of large quantities of virions. These virions were bound to a substrate, sera from patients added and any patients antibodies sensitive to HIV allowed to bind. Any unbound antibodies were washed away. Then a peroxidase enzyme-labeled antibody targeted to human antibody bound was added, allowed to bind and the unbound antibodies again washed away. Any HIV-targeted patient antibodies would bind the antigen and be bound in turn by the peroxidase-labeled antibody and the peroxidase would then change the color of media \citep{Safai1984,Sarngadharan1984,Ward1986}. These tests had a large false positive rate and the standard procedure was to perform multiple ELISA tests follow by a Western blot test \citep{Towbin1979,CDC1985} but false positives were still prevalent \citep{Burke1986}. More conservative criteria and cleaner lab procedures reduced false positives \citep{Burke1988}. These assays have been developed to fourth generation \citep{Chappel2009} with more sensitive and specific detection of patient antibodies and earlier detection using antibodies against the HIV capsid protein \citep{Weber1998,Weber2002}.  
 
 	Slightly less specific but rapid immunoassays providing results in 30 minutes have been developed to allow point-of-care testing with many fewer patients lost to follow up prior to delivery of results \citep{Kassler1995,CDCP1998,CDCP2002}. Rapid tests detecting HIV in oral fluids have been developed and obviate the need for a blood draw \citep{Gallo1997,Delaney2006,SemaBaltazar2014}. These rapid care tests allow self testing at home \citep{Granade2004,PantPai2013}.
 
@@ -224,7 +240,7 @@
 	Tests allowing point-of-care qualitative HIV detection are now widespread but point-of-care assays for viral load in a patient exist. In addition, existing laboratory-based tests are relatively expensive and require specialized equipment making access difficult in resource-limited settings \citep{Fiscus2006,Wang2010a}. Without viral load measures, \cdFour{} T cell counts or clinical presentation are used to infer the emergence of drug. These criteria are not specific or sensitive enough without viral load measures so many patients are unnecessarily switched to second line therapy \citep{Mee2008,VanOosterhout2009} or switched too late leading to accumulations of drug resistant mutations \citep{Hosseinipour2009}.  In Chapter \ref{chapLamp}, we design loop-mediated isothermal amplification methods that can be used with microfluidics to create a point-of-care assay of infection and viral load in resource-limited settings.
 
 \section{Contribution summaries}
-	Much of this work was performed as part of a large collaboration. It would not tell a complete story in isolation. Therefore, I have preserved the chapters in published form in and detailed my contribution to each project at the start of the chapter.
+	Much of this work was performed as part of a large collaboration. It would not tell a complete story in isolation. Therefore, I have preserved the chapters in published form and detailed my contribution to each project at the start of the chapter.
 
 
 \end{document}
