--- a/thesis/conclusion/conclusion.tex
+++ b/thesis/conclusion/conclusion.tex
@@ -8,7 +8,6 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 %A common theme was that cell lines and \textit{in vitro} models of these replication steps often disagree with each other and with primary cell data and that biases and artifacts can plague high-throughput sequencing efforts. Care must taken when designing and analyzing such experiments.
 
 \section{Latency and integration location}
-
 	In Chapter \ref{chapLatency}, we showed that the chromosomal location of integration affects proviral latency but the mechanisms appear to differ between cell culture models. Similarly a recent study of nine cell culture models found that no single model reliably predicted the performance of activating compounds in \textit{ex vivo} tests of latently infected cells from HIV patients \citep{Spina2013}. This suggests that either some cell culture models do not accurately reflect latency in patients or that there are diverse subsets of cells with differing mechanisms of latency within patients. 
 
 	Cell culture models are currently used to screen potentially therapeutic compounds \citep{Xing2011,Spina2013}. If some cell culture models are not representative of \textit{in vivo} conditions then potential treatments may be discarded or marked for development erroneously. Further comparisons between additional cell culture models and additional replicates of existing models might allow discrimination between batch/lab effects and reveal patterns between models. Comparison with cells extracted from patients or infected lab animals might offer a gold standard comparison although it is difficult to obtain large amounts of cells and difficult to distinguish defective provirus from latent provirus in such populations. %Perhaps cell sorting for a marker of viral activity, applying a strong inducing agent and sorting again for newly expressed virus.
@@ -38,7 +37,8 @@ In this dissertation, we described studies characterizing HIV-1 latency, express
 
 	%Characterization of changes over the replication cycle \citep{Mohammadi2013} and between subjects would be useful. Long-term nonprogressors still uncertain check whether splicing involved either due to host variation [[GWAS studies]] or virus [[that mutated virus]].
 
-	Disruption of RNA processing can drastically reduce viral replication \citep{Wentz1997,Caputi2004,Madsen2005,Paca-Uccaralertkun2006,Mandal2008}. Small molecules that inhibit cellular SR splicing proteins and disrupt viral splicing show promise as antiretroviral therapies \citep{Fukuhara2006,Bakkour2007,Wong2011,Wong2013}. Characterization of splicing in cells treated with splicing inhibitors could reveal potential escape pathways and optimal combinations of drug therapies.
+	Disruption of RNA processing can drastically reduce viral replication \citep{Wentz1997,Caputi2004,Madsen2005,Paca-Uccaralertkun2006,Mandal2008}. Inhibition of cellular splicing factors reduces viral reproduction in many genome-wide siRNA screens \citep{Brass2008,Konig2008,Bushman2009} and several members of the spliceosome interact with viral proteins in affinity pulldowns \citep{Jager2012}. Small molecules that inhibit cellular SR splicing proteins and disrupt viral splicing show promise as antiretroviral therapies \citep{Fukuhara2006,Bakkour2007,Wong2011,Wong2013}. Characterization of splicing in cells treated with splicing inhibitors could reveal potential escape pathways and optimal combinations of drug therapies.
+
 
 \section{Host expression during HIV infection} 
 	In Chapter \ref{chapRnaSeq}, we saw many changes in host expression and splicing in HIV infected cells including intron retention and strong changes in apoptotic and innate immunity genes. We focused on generating a dense data set at a single time point and subject to allow discrimination of within-condition versus between-condition variation. Further sampling using more human subjects and time points, improved sequencing techniques, alternative culturing and extraction and more viral strains would clarify and extend these patterns.
