--- a/thesis/latency/latency.tex
+++ b/thesis/latency/latency.tex
@@ -274,8 +274,8 @@
 \section{Availability of supporting data}
 Sequence reads from the \Memory{} sample reported here, the \Resting{} and \Active{} data reported by \citet{Pace2012}, the \Bcl{} data reported by \citet{Shan2011} and  reprocessed data originally reported by \citet{Lewinski2005} are available at the Sequence Read Archive under accession number SRP028573. 
 
-\section{Author's contributions}
-	SS-M led the computational analysis, with assistance from CCB and NM.  MKL, DL and JG analyzed integration sites using IonTorrent sequencing.  MF, AB and VP prepared DNA from latent and activated T cells using the \Memory{} model.  LS, RFS, MJP, LMA and UO'D contributed data and suggestions.  SS-M, KEO and FDB planned the overall study, and SS-M and FDB wrote the paper. All authors read and approved the final manuscript. 
+%\section{Author's contributions}
+	%SS-M led the computational analysis, with assistance from CCB and NM.  MKL, DL and JG analyzed integration sites using IonTorrent sequencing.  MF, AB and VP prepared DNA from latent and activated T cells using the \Memory{} model.  LS, RFS, MJP, LMA and UO'D contributed data and suggestions.  SS-M, KEO and FDB planned the overall study, and SS-M and FDB wrote the paper. All authors read and approved the final manuscript. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Acknowledgements}
